syntax = "proto3";

option csharp_namespace = "Image";

package Image;

service ImageService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetImage (GrpcInt) returns (ImageResponse);
}

//=========================Request-=============================
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message GrpcInt
{
  int32 Value = 1;
}

//=========================Response-=============================

message ImageResponse {
  int32 id = 1;
  int32 modelId = 2;
  string imageUrl = 3;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

